--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-
+<app-mobile-menu *ngIf="showMenu"></app-mobile-menu>
 <div class="image-hero super">
     <div class="text-area">
       <h2 class="light black">WEAR A SHIRT</h2>
