--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,8 @@
         <a>ABOUT US</a>
         <button class="sm-button">VISIT OUR STORE</button>
     </div>
-    <div class="responsive-menu">
-        <a><img src="assets/images/menu.svg"/></a>
+    <div class="rmenu">
+        <a (click)="showMenu()"><img src="assets/images/menu.svg"/></a>
     </div>
 
 </div>
