--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,19 @@
 <app-header></app-header>
 <app-mobile-menu *ngIf="showMenu"></app-mobile-menu>
 <div class="image-hero super">
-    <div class="text-area">
-      <h2 class="light black">WEAR A SHIRT</h2>
-      <h1 class="black">CHANGE THE WORLD</h1>
-    </div> <!--text-area-->
-  </div><!-- end of image-hero-->
+  <div class="overlay">
+      <div class="text-area">
+          <h2 class="light black">WEAR A SHIRT</h2>
+          <h1 class="black">CHANGE THE WORLD</h1>
+        </div> <!--text-area-->
+  </div><!-- End of Overlay -->
+</div><!-- end of image-hero-->
+
+<div class="information-bar">
+  <div class="left">
+    <h3><span class="bold">We envision a world where love defines family.</span> Where every family, child and parent gets to feel the love and security of a forever family. </h3>
+  </div>
+  <div class="right">
+    <p class="content">To help this vision become reality we want to lead a movement to change how the world views fostering and adoption.  We want to break the mystery around what it means to open your family to fostering or adopting a child and lift the conversation out the stigma that is frequently associated with it today. </p>
+  </div>
+</div>
