--- a/src/styles.less
+++ b/src/styles.less
@@ -12,7 +12,9 @@
     text-decoration: none;
     border: none;
 }
-
+p.content {
+  font-size: 18px;
+}
 h1 {
     font-size: 72px;
     font-weight: 600px;
@@ -42,7 +44,7 @@ h1 {
     }
   }
   h3 {
-    font-size: 28px;
+    font-size: 36px;
     font-weight: 600;
     
     &.white {
