--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,7 @@
   </div><!-- End of Overlay -->
 </div><!-- end of image-hero-->
 
-<div class="information-bar">
-  <div class="left">
-    <h3><span class="bold">We envision a world where love defines family.</span> Where every family, child and parent gets to feel the love and security of a forever family. </h3>
-  </div>
-  <div class="right">
-    <p class="content">To help this vision become reality we want to lead a movement to change how the world views fostering and adoption.  We want to break the mystery around what it means to open your family to fostering or adopting a child and lift the conversation out the stigma that is frequently associated with it today. </p>
-  </div>
+<div class="container">
+  <app-information-bar></app-information-bar>
 </div>
+
