--- a/src/styles.less
+++ b/src/styles.less
@@ -12,6 +12,10 @@
     text-decoration: none;
     border: none;
 }
+.container {
+  max-width: 1700px;
+  margin: 0 auto;
+}
 p.content {
   font-size: 18px;
 }
