--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,9 @@
 
 <div class="container">
   <app-information-bar></app-information-bar>
+
+  <div class="breaker-bar">
+    <hr id="left"/><h2>Change The Narrative</h2><hr id="right"/>
+  </div>
 </div>
 
