--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -48,73 +48,70 @@ body, html {
             margin-top: 10px;
           }
         }
-      }
-    } 
-  } // End of Image Hero
+    }
+  } 
+} // End of Image Hero
 
+.breaker-bar {
+  clear: both;
+  position: relative;
+  padding-top: 100px;
 
-.information-bar  {
-  padding-right: 30px;
-  padding-left: 30px;
-  
-  .left {
+  @media screen and (max-width: 1100px) {
+    padding-top: 0px;
+  }
+
+  @media screen and (max-width: 600px) {
+    padding-top: 50px;
+  }
+
+  hr {
+    color: @primary-color;
+    width: 30%;
+    
+    @media screen and (max-width: 1300px) {
+      width:25%;
+    }
+
+    @media screen and (max-width: 800px) {
+      width:20%;
+    }
+    @media screen and (max-width: 500px) {
+      display: none;
+    }
+  }
+  #left {
+    position: absolute;
+    left:0px;
+    float:left;
+  }
+  h2 {
+    float:left;
+    width: 460px;
+    position: absolute;
+    left: 50%;
+    margin-left: -230px;
+    margin-top: -25px;
     color: @heading-gray;
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    float: left;
-    
 
-    @media screen and (max-width: 1100px) {
-      width: 100%;
-      margin-bottom: -30px;
+    @media screen and (max-width: 1050px) {
+      font-size: 36px;
+      margin-top: -15px;  
+      width: 342px;
+      margin-left: -171px;
+
     }
 
-    span {
-      font-weight: 900;
-    }
-    h3 {
-      font-weight: 400;
-      @media screen and (max-width: 800px) {
-        font-size: 26px;
-      }
-      @media screen and (max-width: 1200px) {
-        font-size: 30px;
-      }
-    }
-    .inner-wrapper {
-      max-width: 600px;
-      padding-right: 40px;
-      padding-left: 40px;
-      @media screen and (max-width:1100px) {
-        max-width: none;
-        padding: 0px 50px;
-      }
+    @media screen and (max-width: 650px) {
+      font-size: 30px;
+      margin-top: -15px;  
+      width: 285px;
+      margin-left: -142px;
+
     }
   }
-  .right {
-    color: @light-gray;
-    width: 45%;
-    float:right;
-    padding-top: 25px;
-    float: left;
-    min-height: 250px; 
-
-    .inner-wrapper {
-      padding-left: 30px;
-      padding-right: 50px;
-      @media screen and (max-width: 1100px) {
-        padding: 0px 50px;
-      }
-    }
-    
-    @media screen and (max-width: 1200px) {
-      padding-top: 10px;
-    }
-    @media screen and (max-width: 1100px) {
-      width: 100%;
-      min-height: none;
-    }
+  #right {
+    position: absolute;
+    right: 0px;
   }
-} // End of Information Bar
+}
