--- a/src/app/information-bar/information-bar.component.less
+++ b/src/app/information-bar/information-bar.component.less
@@ -38,6 +38,10 @@
           max-width: none;
           padding: 0px 50px;
         }
+
+        @media screen and (max-width:500px) {
+          padding: 0px 20px;
+        }
       }
     }
     .right {
@@ -53,6 +57,9 @@
         padding-right: 50px;
         @media screen and (max-width: 1100px) {
           padding: 0px 50px;
+        }
+        @media screen and (max-width:500px) {
+          padding: 0px 20px;
         }
       }
       
