--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,15 @@
 <div class="image-hero super">
   <div class="overlay">
       <div class="text-area">
+          <hr id="top-line"/>
           <h2 class="light black">WEAR A SHIRT</h2>
           <h1 class="black">CHANGE THE WORLD</h1>
+          <hr id="bottom-line"/>
+          <br/>
+          <br/>
+          <br/>
+          <br/>
+          <button class="large-button">FIND YOUR PERFECT SHIRT</button>
         </div> <!--text-area-->
   </div><!-- End of Overlay -->
 </div><!-- end of image-hero-->
