--- a/src/styles.less
+++ b/src/styles.less
@@ -12,6 +12,17 @@
     text-decoration: none;
     border: none;
 }
+.large-button {
+  background-color: @primary-color;
+  width: 270px;
+  height: 55px;
+  border-radius: 5px;
+  color: #FFF;
+  font-size: 18px;
+  box-shadow: none;
+  text-decoration: none;
+  border: 2px solid #FFF;
+}
 .container {
   max-width: 1700px;
   margin: 0 auto;
