--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -29,10 +29,72 @@ body, html {
         position: relative;
         top: 20vh;
         margin-left: 20px;
+        #top-line, #bottom-line {
+          color: @primary-color;
+        }
+        #top-line {
+          width:140px;
+          float:left;
+          position: relative;
+          top: 20px;
+          margin-right: 5px;
+
+        }
         h2 {
           margin-bottom: -20px;
         }
+        h1 {
+          margin-left: 145px;
+          margin-top: 0px;
+          float:left;
+          margin-bottom: 0px;
+          padding-bottom: 0px;
+        }
+        #bottom-line {
+          margin-left: 5px;
+          position: relative;
+          top: 35px;
+        }
+        button {
+          clear: both;
+          margin-left: 145px;
+        }
     
+        @media screen and (max-width: 1000px) {
+          #top-line {
+            width:75px;
+          }
+          h1, h2, button {
+            margin-left: 75px;
+          }
+        }
+
+        @media screen and (max-width: 800px) {
+          #top-line {
+            width: 50px;
+            top: 10px;
+          }
+          #bottom-line {
+            top: 25px;
+          }
+          h1, h2, button {
+            margin-left: 50px;
+          }
+          h1 {
+            font-size: 50px;
+          }
+          h2 {
+            font-size: 30px;
+            margin-bottom: -10px;
+          }
+          button {
+            position: relative;
+            top: -20px;
+            font-size: 16px;
+            width:230px;
+            height:50px;
+          }
+        }
         
         @media screen and (max-width: 500px) {
   
