--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,9 @@
           <br/>
           <button class="large-button">FIND YOUR PERFECT SHIRT</button>
         </div> <!--text-area-->
+        <div class="scroll-indicator">
+            <img src="assets/images/down.svg"/>
+        </div>
   </div><!-- End of Overlay -->
 </div><!-- end of image-hero-->
 
