--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -15,6 +15,13 @@ body, html {
     width:100%;
     height: 95vh;
     margin-top: -40px;
+
+    @media screen and (max-width: 800px) {
+        margin-top:-25px;
+    }
+    @media screen and (max-width: 600px) {
+      margin-top:-22px;
+  }
     &.super {
       background: url(../assets/images/super.jpg) no-repeat center center fixed; 
       -webkit-background-size: cover;
@@ -96,22 +103,58 @@ body, html {
           }
         }
         
-        @media screen and (max-width: 500px) {
+        @media screen and (max-width: 600px) {
   
           h2 {
-            font-size: 33px;
-            margin-bottom: -5px;
-            font-weight: 400;
+            font-size: 25px;
           }
           h1 {
-            font-size: 55px;
-            line-height: 50px;
-            font-weight: 700;
-            margin-top: 10px;
+            font-size: 40px;
+          }
+          #bottom-line {
+            top:20px;
+          }
+          button {
+            top: -40px;
+            font-size: 14px;
+            width:200px;
+            height:45px;
+          }
+        }
+        @media screen and (max-width: 500px) {
+          #top-line {
+            display: none;
+          }
+          h1, h2, button {
+            margin-left: 5px;
+          }
+        }
+        @media screen and (max-width: 430px) {
+          h1 {
+            width:220px;
+            line-height: 38px;
+            margin-top: 8px;
+          }
+          #bottom-line {
+            top: 58px;
+            margin-left: 0px;
+          }
+          button {
+            top:0px;
           }
         }
     }
-  } 
+    .scroll-indicator {
+      text-align: center;
+      img {
+        width:70px;
+        position: absolute;
+        bottom: 10vh;
+        left: 50%;
+        margin-left: -35px;
+      }
+    } 
+  }
 } // End of Image Hero
 
 .breaker-bar {
