--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,5 +25,20 @@
   <div class="breaker-bar">
     <hr id="left"/><h2>Change The Narrative</h2><hr id="right"/>
   </div>
+
+  <div class="circle-bar">
+    <div class="img-circle">
+      <img src="assets/images/shirt1.png"/>
+    </div>
+    <div class="img-circle">
+      <img src="assets/images/shirt3.png"/>
+    </div>
+    <div class="img-circle">
+      <img src="assets/images/shirt2.png"/>
+    </div>
+    <div class="img-circle">
+      <img src="assets/images/shirt4.png"/>
+    </div>
+  </div>
 </div>
 
