--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -220,3 +220,28 @@ body, html {
     right: 0px;
   }
 }
+
+.circle-bar {
+  clear:both;
+  margin-top: 100px;
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin-left: 5%;
+  .img-circle {
+    width:275px;
+    height:275px;
+    border-radius: 50%;
+    border: 5px solid @primary-color;
+    background-color: #f2f2f2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float:left;
+
+    img {
+      height:200px;
+      border-radius: 20%;
+    }
+  }
+}
