responsive shirt bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
     <div class="img-circle">
       <img src="assets/images/shirt2.png"/>
     </div>
-    <div class="img-circle">
+    <div class="img-circle shirt4">
       <img src="assets/images/shirt4.png"/>
     </div>
   </div>
