--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -228,6 +228,20 @@ body, html {
   justify-content: space-between;
   width: 90%;
   margin-left: 5%;
+
+  @media screen and (max-width: 500px) {
+    width:80%;
+    margin-left: 10%;
+  }
+  @media screen and (max-width:700px) {
+    margin-top: 50px;
+  }
+
+  @media screen and (max-width:1050px) {
+    margin-top: 70px;
+  }
+
+
   .img-circle {
     width:275px;
     height:275px;
@@ -239,9 +253,81 @@ body, html {
     align-items: center;
     float:left;
 
+    @media screen and (max-width: 1400px) {
+      width:250px;
+      height:250px;
+    }
+
+    @media screen and (max-width: 1300px) {
+      width:200px;
+      height:200px;
+    }
+
+    @media screen and (max-width: 1050px) {
+      width:170px;
+      height:170px;
+      border-width: 3px;
+    }
+
+    @media screen and (max-width: 875px) {
+      width:140px;
+      height:140px;
+    }
+
+    &.shirt4 {
+      @media screen and (max-width: 715px) {
+        display: none;
+      }
+    }
+
+    @media screen and (max-width: 550px) {
+      width:120px;
+      height:120px;
+    }
+
+    @media screen and (max-width: 500px) {
+      width:100px;
+      height:100px;
+    }
+
+    @media screen and (max-width: 430px) {
+      width:80px;
+      height:80px;
+    }
+
+
     img {
       height:200px;
       border-radius: 20%;
+
+      @media screen and (max-width: 1400px) {
+        height:175px;
+      }
+
+      @media screen and (max-width: 1400px) {
+        height:140px;
+      }
+
+      @media screen and (max-width: 1050px) {
+        height:120px;
+      }
+
+      @media screen and (max-width: 875px) {
+        height:100px;
+      }
+
+      @media screen and (max-width: 550px) {
+        height:90px;
+      }
+
+      @media screen and (max-width: 500px) {
+        height:80px;
+      }
+
+      @media screen and (max-width: 430px) {
+        height:60px;
+      }
+
     }
   }
 }
