adding information bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,5 +40,11 @@
       <img src="assets/images/shirt4.png"/>
     </div>
   </div>
+
+  <div class="centered-paragraph-bar">
+    <p>We want you to join a movement to change how the world views fostering and adoption so no child goes without a forever family.  Until someone has the opportunity to experience adopting or fostering a child in need first hand the prospect of doing so can seem overwhelming, impractical or downright scary.  </p>
+    <p>In our own experience it is impossible to count the number of times we have heard say “I could never do what your doing, you must be some sort of angel”, or “You Adopted? So you didn’t want to have kids of your own?” or even “Why would you want to foster, aren’t those the kids no one wants?”. </p>
+    <p>We want to help start positive conversations which will give proud parents the opportunity to share the joys, challenges and realities of being a foster or adoptive family. Maybe if we can start enough of those conversations we can help find a home for every child. </p>
+  </div>
 </div>
 
