--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -331,3 +331,15 @@ body, html {
     }
   }
 }
+.centered-paragraph-bar {
+  width:74%;
+  margin-left: 13%;
+  text-align: center;
+  color: @light-gray;
+  margin-top: 50px;
+
+  @media screen and (max-width: 500px) {
+    font-size: 14px;
+    margin-top: 35px;
+  }
+}
