--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,5 +46,25 @@
     <p>In our own experience it is impossible to count the number of times we have heard say “I could never do what your doing, you must be some sort of angel”, or “You Adopted? So you didn’t want to have kids of your own?” or even “Why would you want to foster, aren’t those the kids no one wants?”. </p>
     <p>We want to help start positive conversations which will give proud parents the opportunity to share the joys, challenges and realities of being a foster or adoptive family. Maybe if we can start enough of those conversations we can help find a home for every child. </p>
   </div>
+  <div class="image-bar">
+    <div class="info-image">
+      <div class="image-area">
+        <img src="assets/images/info-image1.png"/>
+      </div>
+      <div class="text-area">
+        <p><span>We want to start a positive movement by creating opportunities </span>for open, honest discussions of what it is really like to experience fostering or adopting a child</p>
+      </div>
+    </div>
+
+    <div class="info-image right">
+      <div class="image-area">
+        <img src="assets/images/info-image1.png"/>
+      </div>
+      <div class="text-area">
+        <p><span>It is our goal to help everyone understand </span>not only the challenges children waiting for a forever home face, but the motivations of those who open their homes to these children in need</p>
+      </div>
+    </div>
+  </div>
 </div>
+
 
