--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,6 +46,7 @@
     <p>In our own experience it is impossible to count the number of times we have heard say “I could never do what your doing, you must be some sort of angel”, or “You Adopted? So you didn’t want to have kids of your own?” or even “Why would you want to foster, aren’t those the kids no one wants?”. </p>
     <p>We want to help start positive conversations which will give proud parents the opportunity to share the joys, challenges and realities of being a foster or adoptive family. Maybe if we can start enough of those conversations we can help find a home for every child. </p>
   </div>
+
   <div class="image-bar">
     <div class="info-image">
       <div class="image-area">
@@ -62,6 +63,51 @@
       </div>
       <div class="text-area">
         <p><span>It is our goal to help everyone understand </span>not only the challenges children waiting for a forever home face, but the motivations of those who open their homes to these children in need</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="challenge-bar">
+    <div class="left">
+      <hr/>
+      <div class="text-area">
+        <h4 class="top-heading">Our Challenge</h4>
+        <h3>By The Numbers</h3>
+      </div>
+    </div>
+
+    <div class="right">
+      <div class="image-stat">
+        <div class="circle-image">
+          <img src="assets/images/stat1.png"/>
+        </div>
+
+        <div class="stat-area">
+          <h4 class="header">500,000</h4>
+          <p class="line">Children Who Are In Foster Care Today</p>
+        </div>
+      </div>
+
+      <div class="image-stat">
+        <div class="circle-image">
+          <img src="assets/images/stat1.png"/>
+        </div>
+
+        <div class="stat-area">
+          <h4 class="header">120,000</h4>
+          <p class="line">Kids Will Be Eligible For Adoption This Year</p>
+        </div>
+      </div>
+
+      <div class="image-stat">
+        <div class="circle-image">
+          <img src="assets/images/stat1.png"/>
+        </div>
+
+        <div class="stat-area">
+          <h4 class="header">26,000</h4>
+          <p class="line">Teens Will Age Out Of Foster Care This Year</p>
+        </div>
       </div>
     </div>
   </div>
