--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,7 +79,7 @@
     <div class="right">
       <div class="image-stat">
         <div class="circle-image">
-          <img src="assets/images/stat1.png"/>
+          <img src="assets/images/graph.svg"/>
         </div>
 
         <div class="stat-area">
@@ -90,7 +90,7 @@
 
       <div class="image-stat">
         <div class="circle-image">
-          <img src="assets/images/stat1.png"/>
+          <img src="assets/images/letter.svg"/>
         </div>
 
         <div class="stat-area">
@@ -101,7 +101,7 @@
 
       <div class="image-stat">
         <div class="circle-image">
-          <img src="assets/images/stat1.png"/>
+          <img src="assets/images/calendar.svg"/>
         </div>
 
         <div class="stat-area">
