--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,6 +1,6 @@
 @primary-color: #8FBE00;
 @link-blue: #31A9FF;
-@heading-gray: #716B70;
+@heading-gray: #333333;
 @light-gray: #444444;
 @primary-font: 'Source Sans Pro', sans-serif;
 
@@ -489,6 +489,7 @@ body, html {
     .text-area {
       width: 375px;
       margin-left: 295px;
+      color: @heading-gray;
 
       @media screen and (max-width: 1300px) {
         margin-left: 210px;
@@ -579,6 +580,7 @@ body, html {
       }
       .stat-area {
         width: 100%;
+        color: @heading-gray;
         .header {
           font-size: 42px;
           font-weight: 600;
