--- a/src/app/information-bar/information-bar.component.less
+++ b/src/app/information-bar/information-bar.component.less
@@ -1,4 +1,4 @@
-@heading-gray: #716B70;
+@heading-gray: #333333;
 @light-gray: #666666;
 .information-bar  {
     padding-right: 30px;
@@ -45,7 +45,7 @@
       }
     }
     .right {
-      color: @light-gray;
+      color: @heading-gray;
       width: 45%;
       float:right;
       padding-top: 25px;
