--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -111,6 +111,70 @@
       </div>
     </div>
   </div>
-</div>
+  <div class="product-grid">
+    <h2> Ready to help change how the world thinks of fostering and adoption?</h2>
+    <div class="the-grid">
+      <div class="product-cell">
+        <div class="image-wrapper">
+            <img src="assets/images/shirt1.png"/>
+        </div>
+      </div>
+
+      <div class="product-cell">
+        <div class="image-wrapper">
+            <img src="assets/images/shirt1.png"/>
+        </div>
+      </div>
+
+      <div class="product-cell">
+        <div class="image-wrapper">
+            <img src="assets/images/shirt1.png"/>
+        </div>
+      </div>
+
+      <div class="product-cell">
+        <div class="image-wrapper">
+            <img src="assets/images/shirt1.png"/>
+        </div>
+      </div>
+
+      <div class="product-cell">
+        <div class="image-wrapper">
+            <img src="assets/images/shirt1.png"/>
+        </div>
+      </div>
+
+      <div class="product-cell">
+        <div class="image-wrapper">
+            <img src="assets/images/shirt1.png"/>
+        </div>
+      </div>
+
+      <div class="product-cell">
+        <div class="image-wrapper">
+             <img src="assets/images/shirt1.png"/>
+        </div>
+      </div>
+  
+      <div class="product-cell">
+        <div class="image-wrapper">
+            <img src="assets/images/shirt1.png"/>
+        </div>
+      </div>
+
+      <div class="product-cell odd-responsive">
+          <div class="image-wrapper">
+              <img src="assets/images/shirt1.png"/>
+          </div>
+        </div>
+
+    </div>
+
+    <div class="call-2-action-row">
+
+    </div>
+    
+  </div>
+</div> <!-- End of container-->
 
 
