--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -613,4 +613,176 @@ body, html {
       }
     }
   } // End of Right
-}
+} // End of Challenge Bar
+
+.product-grid {
+  clear: both;
+  background-color: @primary-color;
+  h2 {
+    text-align: center;
+    margin: 0 10%;
+    font-size: 42px;
+    font-weight: 600;
+    padding: 50px 0px;
+    color: #fff;
+
+    @media screen and (max-width: 1100px) {
+      font-size: 36px;
+    }
+
+    @media screen and (max-width: 680px) {
+      font-size: 30px;
+    }
+
+    @media screen and (max-width: 580px) {
+      font-size: 26px;
+    }
+  }
+  .the-grid {
+    background-color: @primary-color;
+    width: 1580px;
+    margin: 0 auto;
+
+    .product-cell {
+      position: relative;
+      float: left;
+      display: flex;
+      justify-content: center;
+      align-content: center;
+      background-color: @primary-color;
+      padding-bottom: 20px;
+      width: 375px;
+      height:360px;
+      background-color: #f2f2f2;
+      border: 10px solid @primary-color;
+
+      &.odd-responsive {
+        display: none;
+      }
+
+        img {
+          height:250px;
+          width: auto;
+          position: absolute;
+          top: 50%;
+          left:50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+  }
+  .call-2-action-row {
+    background-color: @primary-color;
+    height: 300px;
+    clear: both;
+  }
+
+  @media screen and (max-width: 1590px) {
+    .the-grid {
+      width: 1280px;
+
+      .product-cell {
+        width: 300px;
+        height: 280px;
+
+        img {
+          height: 200px;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 1290px) {
+    .the-grid {
+      width: 1080px;
+
+      .product-cell {
+        width: 250px;
+        height: 230px;
+
+        img {
+          height: 180px;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 1090px) {
+    .the-grid {
+      width: 880px;
+
+      .product-cell {
+        width: 200px;
+        height: 180px;
+
+        img {
+          height: 150px;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 890px) {
+    .the-grid {
+      width: 660px;
+
+      .product-cell {
+
+        &.odd-responsive {
+          display: inherit;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 680px) {
+    .the-grid {
+      width: 540px;
+
+      .product-cell {
+        width: 160px;
+        height: 140px;
+
+        img {
+          height: 120px;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 680px) {
+    .the-grid {
+      width: 440px;
+
+      .product-cell {
+        width: 200px;
+        height: 180px;
+
+        &.odd-responsive {
+          display: none;
+        }
+
+        img {
+          height: 150px;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 440px) {
+    .the-grid {
+      width: 360px;
+
+      .product-cell {
+        width: 160px;
+        height: 140px;
+
+        img {
+          height: 120px;
+        }
+      }
+    }
+  }
+
+  
+
+} //End of Product Grid
