--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -113,10 +113,13 @@
   </div>
   <div class="product-grid">
     <h2> Ready to help change how the world thinks of fostering and adoption?</h2>
+    <div class="stc">
+      <a>SHOP OUR COLLECTION</a>
+    </div>
     <div class="the-grid">
       <div class="product-cell">
         <div class="image-wrapper">
-            <img src="assets/images/shirt1.png"/>
+            <img src="assets/images/shirt7.png"/>
         </div>
       </div>
 
@@ -128,50 +131,52 @@
 
       <div class="product-cell">
         <div class="image-wrapper">
-            <img src="assets/images/shirt1.png"/>
+            <img src="assets/images/shirt3.png"/>
         </div>
       </div>
 
       <div class="product-cell">
         <div class="image-wrapper">
-            <img src="assets/images/shirt1.png"/>
+            <img src="assets/images/shirt2.png"/>
         </div>
       </div>
 
       <div class="product-cell">
         <div class="image-wrapper">
-            <img src="assets/images/shirt1.png"/>
+            <img src="assets/images/shirt4.png"/>
         </div>
       </div>
 
       <div class="product-cell">
         <div class="image-wrapper">
-            <img src="assets/images/shirt1.png"/>
+            <img src="assets/images/shirt5.png"/>
         </div>
       </div>
 
       <div class="product-cell">
         <div class="image-wrapper">
-             <img src="assets/images/shirt1.png"/>
+             <img src="assets/images/shirt6.png"/>
         </div>
       </div>
   
       <div class="product-cell">
         <div class="image-wrapper">
-            <img src="assets/images/shirt1.png"/>
+            <img src="assets/images/shirt8.png"/>
         </div>
       </div>
 
       <div class="product-cell odd-responsive">
           <div class="image-wrapper">
-              <img src="assets/images/shirt1.png"/>
+              <img src="assets/images/shirt9.png"/>
           </div>
         </div>
 
     </div>
 
     <div class="call-2-action-row">
-
+        <div class="stc second-position">
+          <a>See All Designs</a>
+        </div>
     </div>
     
   </div>
