--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -118,54 +118,90 @@
     </div>
     <div class="the-grid">
       <div class="product-cell">
+        <div class="collection-wrapper">
+          <p>Unbreakable</p>
+          <a href="#">View All</a>
+        </div>
         <div class="image-wrapper">
             <img src="assets/images/shirt7.png"/>
         </div>
       </div>
 
       <div class="product-cell">
+        <div class="collection-wrapper">
+            <p>Batman Adoption</p>
+            <a href="#">View All</a>
+          </div>
         <div class="image-wrapper">
             <img src="assets/images/shirt1.png"/>
         </div>
       </div>
 
       <div class="product-cell">
+        <div class="collection-wrapper">
+            <p>Vanquisher of Big Feelings</p>
+            <a href="#">View All</a>
+          </div>
         <div class="image-wrapper">
             <img src="assets/images/shirt3.png"/>
         </div>
       </div>
 
       <div class="product-cell">
+        <div class="collection-wrapper">
+            <p>Love Makes A Family</p>
+            <a href="#">View All</a>
+          </div>
         <div class="image-wrapper">
             <img src="assets/images/shirt2.png"/>
         </div>
       </div>
 
       <div class="product-cell">
+        <div class="collection-wrapper">
+            <p>Just Mom</p>
+            <a href="#">View All</a>
+          </div>
         <div class="image-wrapper">
             <img src="assets/images/shirt4.png"/>
         </div>
       </div>
 
       <div class="product-cell">
+        <div class="collection-wrapper">
+          <p>Not Built For Backing Down</p>
+          <a href="#">View All</a>
+        </div>
         <div class="image-wrapper">
             <img src="assets/images/shirt5.png"/>
         </div>
       </div>
 
       <div class="product-cell">
+        <div class="collection-wrapper">
+          <p>Strong</p>
+          <a href="#">View All</a>
+        </div>
         <div class="image-wrapper">
              <img src="assets/images/shirt6.png"/>
         </div>
       </div>
   
       <div class="product-cell">
+        <div class="collection-wrapper">
+          <p>Change The Narrative Project</p>
+          <a href="#">View All</a>
+        </div>
         <div class="image-wrapper">
             <img src="assets/images/shirt8.png"/>
         </div>
       </div>
 
       <div class="product-cell odd-responsive">
+        <div class="collection-wrapper">
+          <p>Supergirl Adoption</p>
+          <a href="#">View All</a>
+        </div>
           <div class="image-wrapper">
               <img src="assets/images/shirt9.png"/>
           </div>
