--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -716,6 +716,117 @@ body, html {
           left:50%;
           transform: translate(-50%, -50%);
         }
+
+        .collection-wrapper {
+          opacity: 0;
+          background-color: rgba(255, 255, 255, .8);
+          height: 100%;
+          width: 100%;
+          position: absolute;
+          top: 0px;
+          bottom: 0px;
+          z-index: 99;
+          text-align: center;
+
+          @media screen and (max-width: 890px) {
+            opacity: 1;
+            height: 60px;
+            position: absolute;
+            bottom: 0px;
+            background: #fff;
+            top:140px;
+            border-top: 1px solid #ccc;
+          }
+
+          @media screen and (max-width: 440px) {
+            top:100px;
+            height: 60px;
+            border: none;
+            background-color: rgba(255, 255, 255, .9)
+          }
+
+          p {
+            margin-top: 100px;
+            font-size: 30px;
+            font-weight: 300;
+            padding: 0px 20px;
+
+            @media screen and (max-width: 1290px) {
+              margin-top: 50px;
+              font-size: 25px;
+            }
+
+            @media screen and (max-width: 1090px) {
+              margin-top: 30px;
+              font-size: 22px;
+            }
+            @media screen and (max-width: 890px) {
+              margin-top: 14px;
+              font-size: 14px;
+              font-weight: 400;
+            }
+            @media screen and (max-width: 440px) {
+              display: none;
+            }
+          }
+          a {
+            display: block;
+            padding: 10px 15px;
+            width:80px;
+            border: 1px solid #333;
+            text-transform: uppercase;
+            font-weight: 400;
+            margin: 0 auto;
+            text-decoration: none;
+            color: #333;
+
+            &:hover {
+
+            /* This timing applies on the way OUT */
+            transition-timing-function: ease-in;
+  
+            /* Quick on the way out */
+             transition: 0.4s;
+              background-color: @primary-color;
+
+            }
+
+            @media screen and (max-width: 1290px) {
+              font-size: 15px;
+              width: 70px;
+              padding: 8px 12px;
+            }
+
+            @media screen and (max-width: 890px) {
+              padding: 0px;
+              border: none;
+              font-weight: 400;
+              font-size: 12px;
+              color: @link-blue;
+              margin-top: -10px;
+              &:hover {
+                background-color: transparent;
+              }
+            }
+
+            @media screen and (max-width: 440px) {
+              font-size: 16px;
+              margin-top: 18px;
+  
+            }
+
+          }
+          &:hover {
+
+            /* This timing applies on the way OUT */
+            transition-timing-function: ease-in;
+  
+            /* Quick on the way out */
+            transition: 0.4s;
+              opacity: 1;
+
+          }
+        }
       }
   }
   .call-2-action-row {
