picture bar images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,8 +49,8 @@
 
   <div class="image-bar">
     <div class="info-image">
-      <div class="image-area">
-        <img src="assets/images/info-image1.png"/>
+      <div class="image-area img1">
+        <img src="assets/images/happy1.jpg"/>
       </div>
       <div class="text-area">
         <p><span>We want to start a positive movement by creating opportunities </span>for open, honest discussions of what it is really like to experience fostering or adopting a child</p>
@@ -58,8 +58,8 @@
     </div>
 
     <div class="info-image right">
-      <div class="image-area">
-        <img src="assets/images/info-image1.png"/>
+      <div class="image-area img2">
+          <img src="assets/images/happy2.jpg"/>
       </div>
       <div class="text-area">
         <p><span>It is our goal to help everyone understand </span>not only the challenges children waiting for a forever home face, but the motivations of those who open their homes to these children in need</p>
