--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,15 +28,31 @@
 
   <div class="circle-bar">
     <div class="img-circle">
+      <div class="collection-wrapper">
+        <p>Batman Adoption</p>
+        <a href="#">View All</a>
+      </div>
       <img src="assets/images/shirt1.png"/>
     </div>
     <div class="img-circle">
+      <div class="collection-wrapper">
+          <p>Vanquisher of Big Feelings</p>
+          <a href="#">View All</a>
+        </div>
       <img src="assets/images/shirt3.png"/>
     </div>
     <div class="img-circle">
+      <div class="collection-wrapper">
+        <p>Love Makes A Family</p>
+        <a href="#">View All</a>
+      </div>
       <img src="assets/images/shirt2.png"/>
     </div>
     <div class="img-circle shirt4">
+      <div class="collection-wrapper">
+        <p>Just Mom</p>
+        <a href="#">View All</a>
+      </div>
       <img src="assets/images/shirt4.png"/>
     </div>
   </div>
