--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -252,6 +252,7 @@ body, html {
     justify-content: center;
     align-items: center;
     float:left;
+    position: relative;
 
     @media screen and (max-width: 1400px) {
       width:250px;
@@ -329,7 +330,87 @@ body, html {
       }
 
     }
-  }
+
+    .collection-wrapper {
+      opacity: 0;
+      background-color: rgba(255, 255, 255, .8);
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      top: 0px;
+      bottom: 0px;
+      z-index: 99;
+      text-align: center;
+      border-radius: 50%;
+
+      @media screen and (max-width: 890px) {
+        display: none;
+      }
+      p {
+        margin-top: 100px;
+        font-size: 30px;
+        font-weight: 300;
+        padding: 0px 20px;
+
+        @media screen and (max-width: 1390px) {
+          margin-top: 50px;
+          font-size: 25px;
+        }
+
+        @media screen and (max-width: 1090px) {
+          margin-top: 30px;
+          font-size: 22px;
+        }
+        @media screen and (max-width: 890px) {
+          display: none;
+        }
+      }
+      a {
+        display: block;
+        padding: 10px 15px;
+        width:80px;
+        border: 1px solid #333;
+        text-transform: uppercase;
+        font-weight: 400;
+        margin: 0 auto;
+        text-decoration: none;
+        color: #333;
+
+        &:hover {
+
+        /* This timing applies on the way OUT */
+        transition-timing-function: ease-in;
+
+        /* Quick on the way out */
+         transition: 0.4s;
+          background-color: @primary-color;
+
+        }
+
+        @media screen and (max-width: 1390px) {
+          font-size: 15px;
+          width: 70px;
+          padding: 8px 12px;
+        }
+
+        @media screen and (max-width: 890px) {
+          display: none;
+        }
+
+      }
+      &:hover {
+
+        /* This timing applies on the way OUT */
+        transition-timing-function: ease-in;
+
+        /* Quick on the way out */
+        transition: 0.4s;
+          opacity: 1;
+
+      }
+    }
+
+  } // End of Image Circle
 }
 .centered-paragraph-bar {
   width:74%;
