--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,28 +28,28 @@
   </div>
 
   <div class="circle-bar">
-    <div class="img-circle">
+    <div (click)="toggleModal()" class="img-circle">
       <div class="collection-wrapper">
         <p>Batman Adoption</p>
-        <a href="#">View All</a>
+        <a href="#" >View All</a>
       </div>
       <img src="assets/images/shirt1.png"/>
     </div>
-    <div class="img-circle">
+    <div (click)="toggleModal()" class="img-circle">
       <div class="collection-wrapper">
           <p>Vanquisher of Big Feelings</p>
           <a href="#">View All</a>
         </div>
       <img src="assets/images/shirt3.png"/>
     </div>
-    <div class="img-circle">
+    <div (click)="toggleModal()" class="img-circle">
       <div class="collection-wrapper">
         <p>Love Makes A Family</p>
         <a href="#">View All</a>
       </div>
       <img src="assets/images/shirt2.png"/>
     </div>
-    <div class="img-circle shirt4">
+    <div (click)="toggleModal()" class="img-circle shirt4">
       <div class="collection-wrapper">
         <p>Just Mom</p>
         <a href="#">View All</a>
@@ -144,7 +144,7 @@
         </div>
       </div>
 
-      <div class="product-cell">
+      <div (click)="toggleModal()" class="product-cell">
         <div class="collection-wrapper">
             <p>Batman Adoption</p>
             <a href="#">View All</a>
@@ -154,7 +154,7 @@
         </div>
       </div>
 
-      <div class="product-cell">
+      <div (click)="toggleModal()" class="product-cell">
         <div class="collection-wrapper">
             <p>Vanquisher of Big Feelings</p>
             <a href="#">View All</a>
@@ -164,7 +164,7 @@
         </div>
       </div>
 
-      <div class="product-cell">
+      <div (click)="toggleModal()" class="product-cell">
         <div class="collection-wrapper">
             <p>Love Makes A Family</p>
             <a href="#">View All</a>
@@ -174,7 +174,7 @@
         </div>
       </div>
 
-      <div class="product-cell">
+      <div (click)="toggleModal()" class="product-cell">
         <div class="collection-wrapper">
             <p>Just Mom</p>
             <a href="#">View All</a>
@@ -184,7 +184,7 @@
         </div>
       </div>
 
-      <div class="product-cell">
+      <div (click)="toggleModal()" class="product-cell">
         <div class="collection-wrapper">
           <p>Not Built For Backing Down</p>
           <a href="#">View All</a>
@@ -194,7 +194,7 @@
         </div>
       </div>
 
-      <div class="product-cell">
+      <div (click)="toggleModal()" class="product-cell">
         <div class="collection-wrapper">
           <p>Strong</p>
           <a href="#">View All</a>
@@ -204,7 +204,7 @@
         </div>
       </div>
   
-      <div class="product-cell">
+      <div (click)="toggleModal()" class="product-cell">
         <div class="collection-wrapper">
           <p>Change The Narrative Project</p>
           <a href="#">View All</a>
@@ -214,7 +214,7 @@
         </div>
       </div>
 
-      <div class="product-cell odd-responsive">
+      <div (click)="toggleModal()" class="product-cell odd-responsive">
         <div class="collection-wrapper">
           <p>Supergirl Adoption</p>
           <a href="#">View All</a>
