--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
 
     <div class="right-area">
         <a>ABOUT US</a>
-        <button class="sm-button">VISIT OUR STORE</button>
+        <button (click)="showModal()" class="sm-button">VISIT OUR STORE</button>
     </div>
     <div class="rmenu">
         <a (click)="showMenu()"><img src="assets/images/menu.svg"/></a>
