--- a/src/styles.less
+++ b/src/styles.less
@@ -1,6 +1,12 @@
 @primary-color: #8FBE00;
 @link-blue: #31A9FF;
 
+a, button {
+  cursor: pointer;
+}
+a:hover {
+  color: #0093fd;
+}
 .sm-button {
     background-color: @primary-color;
     width: 165px;
