--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -65,6 +65,7 @@ body, html {
         button {
           clear: both;
           margin-left: 145px;
+          cursor: pointer;
         }
     
         @media screen and (max-width: 1000px) {
@@ -119,6 +120,7 @@ body, html {
             font-size: 14px;
             width:200px;
             height:45px;
+            cursor: pointer;
           }
         }
         @media screen and (max-width: 500px) {
@@ -141,6 +143,7 @@ body, html {
           }
           button {
             top:0px;
+            cursor: pointer;
           }
         }
     }
@@ -152,6 +155,7 @@ body, html {
         bottom: 10vh;
         left: 50%;
         margin-left: -35px;
+        cursor: pointer;
       }
     } 
   }
@@ -743,6 +747,11 @@ body, html {
     border: 1px solid #ccc;
     top: -70px;
 
+    &:hover {
+      a{
+        color: #0093fd;
+      }
+    }
     &.second-position {
       top: 70px;
     }
