--- a/src/app/redirect-modal/redirect-modal.component.html
+++ b/src/app/redirect-modal/redirect-modal.component.html
@@ -1,10 +1,10 @@
 <div class="overlay">
     <div class="modal">
         <h2>One Last Detail...</h2>
-        <p> We aren't bigh enought to print our own merchandise (at least not yet) so we have partnered with the good folks at Spreadshirt to help us out.</p>
+        <p> We aren't big enough to print our own merchandise (at least not yet) so we have partnered with the good folks at Spreadshirt to help us out.</p>
         <p>Please use the very large button below to navigate to our Spreadshirt store and Spreadshirt will take it from there!</p>
 
-        <a class="very-large-btn">
+        <a class="very-large-btn" target="_blank" href="{{url}}">
             Continue to <br/>
             <img src="assets/images/shirt-logo.svg"/>
         </a>
